# ctx-gate

./: .gitignore  README.md  ctx_gate.py  mcp_server.py  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/checkpoint/: __init__.py
src/compressor/: __init__.py  compressor.py  summarizer.py  task_shift.py  tokens.py
src/eval/: __init__.py  harness.py  scenarios.py
src/proxy/: __init__.py  server.py  sessions.py  sse.py  stats.py
src/rag/: __init__.py  indexer.py  store.py
src/router/: __init__.py
tests/: test_compress_phase2.py  test_core.py  test_eval.py  test_mcp.py  test_proxy.py  test_retries.py  test_sessions.py  test_sse.py  test_stats.py  test_tokens.py
