[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctx-gate"
version = "0.1.0"
description = "LLM-agnostic context optimization proxy — reduce session token usage without losing accuracy"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "claude", "token", "context", "proxy", "optimization"]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Accurate token counting (optional, falls back to char-based estimate)
tokenizer = [
    "tiktoken>=0.7.0",
]
# Vector store for RAG-based retrieval (optional advanced feature)
rag = [
    "lancedb>=0.6.0",
    "sentence-transformers>=2.7.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]

[project.scripts]
ctx-gate = "ctx_gate:main"

[tool.setuptools]
# ctx_gate.py is a top-level module (the CLI entry point), not under src/.
py-modules = ["ctx_gate"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
